# LARS

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  VIDEO_SCRIPT.md  benchmark_results.json  lars_v2_paper.md  lars_v3_paper.md  paper_outline.md  paper_v2_limitations.md  paper_v2_section2_related_work.md  paper_v2_section5.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
docs/: ARCHITECTURE.md
examples/: README.md  demo.py  demo_live.py  demo_merge.py  run_benchmark.py
lars/: __init__.py  agent.py  baselines.py  benchmark.py  delta_u.py  embeddings.py  executor.py  extractor.py  langgraph_integration.py  llm.py  merger.py  metrics.py  prompts.py  state.py  tasks.py  update_intent.py
tests/: test_agent.py  test_benchmark.py  test_extractor.py  test_merge.py
